# parser-lexer-generator

./: .gitignore
labA/: CMakeLists.txt  expressionTree.cpp  expressionTree.h  main.cpp  regularExpressions.cpp  regularExpressions.h
labA/Automata/: Automata.cpp  NonDeterministic.cpp
labA/ExpressionTree/: ExpressionTree.cpp  ExpressionTree.h  expressionTree.cpp  expressionTree.h
labA/LexerErrors/: ErrorsHandler.cpp  ErrorsHandler.h
labA/RegularExpression/: RegularExpressions.cpp  RegularExpressions.h  regularExpressions.cpp  regularExpressions.h
labA/Token/: Characters.h  Operators.cpp  Operators.h  Symbols.cpp  Symbols.h  regularExpressions.cpp  regularExpressions.h
labA/Visitor/: AutomataVisitor.cpp  TreeGraph.cpp  TreeGraph.h  Visitant.cpp  Visitant.h
labA/Visualization/: Mermaid.cpp  Mermaid.h
lexer/: graph.html  main.cpp
lexer/Automata/: Automata.cpp  SubsetConstruction.cpp  SubsetConstruction.h
lexer/ExpressionTree/: ExpressionTree.cpp  ExpressionTree.h
lexer/LexerErrors/: ErrorsHandler.cpp
lexer/RegularExpression/: RegularExpressions.cpp
lexer/Token/: Characters.cpp  Characters.h  Operators.cpp  Symbols.cpp
lexer/Visitor/: AutomataVisitor.cpp  TreeGraph.cpp  Visitant.cpp
lexer/Visualization/: Mermaid.cpp
